--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,3 @@
-@import url(font-awesome.min.css);
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");
 
 /*
 	Dimension by HTML5 UP
@@ -23,7 +21,8 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	font-family:'crimson text',serif;}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -172,6 +171,10 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2rem 0;
+	}
+
+	h1: :hover{
+		background-color:orange;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1346,11 +1349,13 @@ input, select, textarea {
 				}
 
 					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.075);
+						background-color: rgb(255, 251, 0);
+						color:black;
+						font-weight: bold;
 					}
 
 					#header nav ul li a:active {
-						background-color: rgba(255, 255, 255, 0.175);
+						background-color: rgba(114, 75, 75, 0.175);
 					}
 
 		#header nav.use-middle:after {
